sanitizeURL can throw URISyntaxException, imgur.